SERVER-58398 TenantMigrationDonor will not retry recipientSyncData on non-retriable interruption errors

(cherry picked from commit bbd0b90085c06de2882e48d68812ac822a4412f9)